// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`runScript > returns error on parse failure 1`] = `
{
  "error": "Parse error: Unknown command: invalidcommand",
  "status": "error",
}
`;

exports[`runScript > returns error with message and trace on execution failure 1`] = `
{
  "data": {
    "fileErrors": [
      {
        "error": "narrow: no matches for pattern /nonexistent/",
        "path": "<tmpDir>/test.txt",
        "savedRegisters": [],
        "trace": [
          {
            "command": "file <tmpDir>/test.txt",
            "snippet": "switched to <tmpDir>/test.txt (2 lines)",
          },
          {
            "command": "narrow",
            "snippet": "hello",
          },
          {
            "command": "retain_first",
            "snippet": "hello",
          },
        ],
      },
    ],
    "finalSelection": {
      "ranges": [
        {
          "content": "hello",
          "endPos": {
            "col": 5,
            "line": 1,
          },
          "startPos": {
            "col": 0,
            "line": 1,
          },
        },
      ],
    },
    "mutations": [],
    "trace": [
      {
        "command": "file <tmpDir>/test.txt",
        "snippet": "switched to <tmpDir>/test.txt (2 lines)",
      },
      {
        "command": "narrow",
        "snippet": "hello",
      },
      {
        "command": "retain_first",
        "snippet": "hello",
      },
    ],
  },
  "edlRegisters": {
    "nextSavedId": 0,
    "registers": Map {},
  },
  "formatted": "Trace:
  file <tmpDir>/test.txt → switched to <tmpDir>/test.txt (2 lines)
  narrow → hello
  retain_first → hello

Mutations:
No files modified.

Final selection (1 ranges):
  Range 1: [1:0 - 1:5]
hello

File errors:
  <tmpDir>/test.txt: narrow: no matches for pattern /nonexistent/
    Trace:
      file <tmpDir>/test.txt → switched to <tmpDir>/test.txt (2 lines)
      narrow → hello
      retain_first → hello",
  "status": "ok",
}
`;

exports[`runScript > returns ok with no mutations when script only selects 1`] = `
{
  "data": {
    "fileErrors": [],
    "finalSelection": {
      "ranges": [
        {
          "content": "hello",
          "endPos": {
            "col": 5,
            "line": 1,
          },
          "startPos": {
            "col": 0,
            "line": 1,
          },
        },
      ],
    },
    "mutations": [],
    "trace": [
      {
        "command": "file <tmpDir>/test.txt",
        "snippet": "switched to <tmpDir>/test.txt (2 lines)",
      },
      {
        "command": "narrow",
        "snippet": "hello",
      },
      {
        "command": "retain_first",
        "snippet": "hello",
      },
    ],
  },
  "edlRegisters": {
    "nextSavedId": 0,
    "registers": Map {},
  },
  "formatted": "Trace:
  file <tmpDir>/test.txt → switched to <tmpDir>/test.txt (2 lines)
  narrow → hello
  retain_first → hello

Mutations:
No files modified.

Final selection (1 ranges):
  Range 1: [1:0 - 1:5]
hello",
  "status": "ok",
}
`;

exports[`runScript > returns ok with trace, mutations, and final selection 1`] = `
{
  "data": {
    "fileErrors": [],
    "finalSelection": {
      "ranges": [
        {
          "content": "planet",
          "endPos": {
            "col": 12,
            "line": 1,
          },
          "startPos": {
            "col": 6,
            "line": 1,
          },
        },
      ],
    },
    "mutations": [
      {
        "content": "hello planet
",
        "path": "<tmpDir>/test.txt",
        "summary": {
          "deletions": 0,
          "insertions": 0,
          "linesAdded": 1,
          "linesRemoved": 1,
          "replacements": 1,
        },
      },
    ],
    "trace": [
      {
        "command": "file <tmpDir>/test.txt",
        "snippet": "switched to <tmpDir>/test.txt (2 lines)",
      },
      {
        "command": "narrow",
        "snippet": "world",
      },
      {
        "command": "retain_first",
        "snippet": "world",
      },
      {
        "command": "replace",
        "snippet": "planet",
      },
    ],
  },
  "edlRegisters": {
    "nextSavedId": 0,
    "registers": Map {},
  },
  "formatted": "Trace:
  file <tmpDir>/test.txt → switched to <tmpDir>/test.txt (2 lines)
  narrow → world
  retain_first → world
  replace → planet

Mutations:
  <tmpDir>/test.txt: 1 replacements, +1/-1 lines

Final selection (1 ranges):
  Range 1: [1:6 - 1:12]
planet",
  "status": "ok",
}
`;
